--- a/public/position.html
+++ b/public/position.html
@@ -21,9 +21,7 @@
                 </div>
             </div>
         </div>
-        <script src="pos-builder.react.js"></script>
-        <script src="pos-builder.app.js"></script>
-        <script src="pos-builder.tests.js"></script>
+        <script src="js/pos-builder.tests.js"></script>
         <script>
             var props = {
                 board: {
